--- a/Gtk-Theme/Snow-Gtk/src/gtk-3.0/_colors.scss
+++ b/Gtk-Theme/Snow-Gtk/src/gtk-3.0/_colors.scss
@@ -6,7 +6,7 @@ $accent-1: #c15a5e;
 $accent-2: #eaac79;
 $accent-3: #d8b170;
 $accent-4: #8cb5af;
-$accent-5: #809fbe;
+$accent-5: #4679c5;
 $accent-6: #8fa176;
 $accent-7: #a07ea7;
 $accent-8: #b183ba;
